add example of using SLAB (SLOB) allocator with slab sizes tuned to reduce heap defragmentation issues